tests/test_files_pa3/external/errors/ComplexAssignmentError3.ic
// error should be:
// semantic error at line 27: Illegal local var init type (Type check)


class A {
    D e;
    
    D retE() {
        return new E();
    }
}

class B extends A {}

class C extends B {}

class D {
    A c;
}

class E extends D {

     static void main(string[] args){}
     
     void complexAssignment() {
         c = new C();
         E d = c.retE();
        

     }
    
}